--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>Cosmo Arcade — Safe ES5 (menu fix)</title>
+<title>Cosmo Arcade — Switch + Camera</title>
 <style>
   html,body{margin:0;height:100%;background:#0a1020;color:#fff;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;-webkit-user-select:none;user-select:none;touch-action:none}
   #wrap{display:flex;flex-direction:column;height:100dvh}
@@ -11,6 +11,7 @@
   header h1{font-size:16px;margin:0}
   #ui{margin-left:auto;display:flex;gap:8px;align-items:center}
   #score{padding:6px 10px;background:#0f1a36;border:1px solid #2b3f6f;border-radius:8px;font-weight:700}
+  .hbtn{padding:6px 10px;background:#182a56;border:1px solid #3a5aa0;border-radius:8px;color:#fff;font-weight:700;cursor:pointer}
 
   #stage{position:relative;flex:1;min-height:0}
   #canvas{position:absolute;inset:0;display:block;width:100%;height:100%;touch-action:none;background:#0a0e19;z-index:1}
@@ -38,7 +39,11 @@
 <div id="wrap">
   <header>
     <h1>Cosmo Arcade</h1>
-    <div id="ui"><div id="score">0</div></div>
+    <div id="ui">
+      <div id="score">0</div>
+      <button id="switchBtn" class="hbtn" title="Переключить игру">Переключить игру</button>
+      <button id="back" class="hbtn" title="В меню">В меню</button>
+    </div>
   </header>
 
   <div id="stage">
@@ -49,7 +54,8 @@
         <button class="btn" data-mode="worm">🐍 Запустить Worm</button>
         <button class="btn" data-mode="cat">🐱 Запустить Cat</button>
         <p style="opacity:.8;font-size:12px;margin:6px 0 0 0">
-          Worm: левый джойстик поворачивает. Cat: правый джойстик ходит, ⤴︎ Jump и любой тап — прыжок.
+          Worm: левый джойстик поворачивает.<br>
+          Cat: правый джойстик ходит, ⤴︎ Jump и любой тап — прыжок. Камера следует вверх.
         </p>
       </div>
     </div>
@@ -63,16 +69,14 @@
 </div>
 
 <script>
-/* ---- БЕЗОПАСНЫЙ СТАРТ ---- */
-(function(){
-  try{
-    if ('serviceWorker' in navigator && navigator.serviceWorker.getRegistrations) {
-      navigator.serviceWorker.getRegistrations().then(function(rs){ rs.forEach(function(r){ r.unregister(); }); });
-    }
-  }catch(e){}
-})();
+/* отключим старый SW (кэш) */
+(function(){try{
+  if ('serviceWorker' in navigator && navigator.serviceWorker.getRegistrations) {
+    navigator.serviceWorker.getRegistrations().then(function(rs){ rs.forEach(function(r){ r.unregister(); }); });
+  }
+}catch(e){} })();
 
-/* ---- БАЗОВЫЕ ССЫЛКИ ---- */
+/* DOM */
 var canvas = document.getElementById('canvas');
 var ctx = canvas.getContext('2d');
 var menu = document.getElementById('menu');
@@ -80,24 +84,21 @@ var scoreEl = document.getElementById('score');
 var joyLeftEl  = document.getElementById('joyLeft');
 var joyRightEl = document.getElementById('joyRight');
 var jumpBtn    = document.getElementById('jumpBtn');
+var switchBtn  = document.getElementById('switchBtn');
+var backBtn    = document.getElementById('back');
 
 function resize(){
   var r = Math.max(1, Math.min(window.devicePixelRatio || 1, 3));
   var w = canvas.parentElement.clientWidth;
   var h = canvas.parentElement.clientHeight;
-  canvas.style.width = w + 'px';
-  canvas.style.height = h + 'px';
-  canvas.width = Math.floor(w*r);
-  canvas.height = Math.floor(h*r);
+  canvas.style.width = w + 'px'; canvas.style.height = h + 'px';
+  canvas.width = Math.floor(w*r); canvas.height = Math.floor(h*r);
   ctx.setTransform(r,0,0,r,0,0);
 }
-window.addEventListener('resize', resize);
-resize();
+window.addEventListener('resize', resize); resize();
 
-var state = 'menu';
-var score = 0;
-function setScore(v){ score = v|0; scoreEl.textContent = score; }
-
+var state='menu', score=0;
+function setScore(v){ score=v|0; scoreEl.textContent=score; }
 function showControls(mode){
   joyLeftEl.style.display  = (mode==='worm') ? 'block' : 'none';
   joyRightEl.style.display = (mode==='cat')  ? 'block' : 'none';
@@ -105,23 +106,27 @@ function showControls(mode){
 }
 function showMenu(){ state='menu'; menu.style.display='flex'; showControls('none'); }
 function hideMenu(){ menu.style.display='none'; }
-
-var modeButtons = document.querySelectorAll('[data-mode]');
-for (var i=0;i<modeButtons.length;i++){
-  modeButtons[i].addEventListener('click', function(){
+document.querySelectorAll('[data-mode]').forEach(function(b){
+  b.addEventListener('click', function(){
     var m = this.getAttribute('data-mode');
     if (m==='worm'){ startWorm(); state='worm'; showControls('worm'); }
     else { startCat(); state='cat'; showControls('cat'); }
     hideMenu();
   });
-}
+});
+backBtn.addEventListener('click', showMenu);
 
-/* ---- ДЖОЙСТИК (ES5) ---- */
+/* КНОПКА ПЕРЕКЛЮЧЕНИЯ ИГРЫ — мгновенно меняет режим */
+switchBtn.addEventListener('click', function(){
+  if (state==='worm'){ startCat(); state='cat'; showControls('cat'); }
+  else if (state==='cat'){ startWorm(); state='worm'; showControls('worm'); }
+});
+
+/* Джойстик (ES5) */
 function makeJoystick(root, radius){
   var knob = root.querySelector('.knob');
   var st = {ax:0, ay:0, active:false};
   var rect=null, id=null;
-
   function clamp(v,a,b){ return Math.max(a, Math.min(b, v)); }
   function setKnob(ax,ay){
     knob.style.left = (50 + clamp(ax,-1,1)*50) + '%';
@@ -129,7 +134,6 @@ function makeJoystick(root, radius){
     knob.style.transform = 'translate(-50%,-50%)';
   }
   function reset(){ st.ax=0; st.ay=0; st.active=false; setKnob(0,0); }
-
   function startXY(x,y,pid){
     id = pid; rect = root.getBoundingClientRect(); st.active = true;
     var cx = rect.left + rect.width/2, cy = rect.top + rect.height/2;
@@ -161,14 +165,14 @@ function makeJoystick(root, radius){
 var joyLeft  = makeJoystick(joyLeftEl, 50); // Worm
 var joyRight = makeJoystick(joyRightEl, 40); // Cat
 
-/* ---- WORM (минимум) ---- */
+/* ===== WORM (минимал) ===== */
 var worm=null, foods=[];
 function startWorm(){
   setScore(0);
   var W=canvas.clientWidth, H=canvas.clientHeight;
   worm={x:W/2,y:H/2, ang:-Math.PI/2, spd:Math.min(W,H)*0.19, trail:[], segs:14, step:4};
-  foods=[];
-  var n=Math.round((W*H)/9000); for(var i=0;i<n;i++) foods.push({x:Math.random()*W, y:Math.random()*H});
+  foods=[]; var n=Math.round((W*H)/9000);
+  for(var i=0;i<n;i++) foods.push({x:Math.random()*W, y:Math.random()*H});
 }
 function updateWorm(dt){
   if (joyLeft.active){ worm.ang = Math.atan2(joyLeft.ay, joyLeft.ax); }
@@ -179,9 +183,8 @@ function updateWorm(dt){
   if (worm.y<0) worm.y+=H; if (worm.y>H) worm.y-=H;
   worm.trail.unshift({x:worm.x,y:worm.y}); if (worm.trail.length>1400) worm.trail.pop();
   for (var i=foods.length-1;i>=0;i--){
-    var f=foods[i]; if (Math.sqrt(Math.pow(f.x-worm.x,2)+Math.pow(f.y-worm.y,2))<12){
-      foods.splice(i,1); setScore(score+5); foods.push({x:Math.random()*W,y:Math.random()*H});
-    }
+    var f=foods[i]; var dx=f.x-worm.x, dy=f.y-worm.y;
+    if (Math.sqrt(dx*dx+dy*dy)<12){ foods.splice(i,1); setScore(score+5); foods.push({x:Math.random()*W,y:Math.random()*H}); }
   }
 }
 function drawWorm(){
@@ -196,34 +199,35 @@ function drawWorm(){
   }
 }
 
-/* ---- CAT — усиленный прыжок ---- */
+/* ===== CAT — камера вверх + сильный прыжок ===== */
 var CAT_G=1400, CAT_JUMP=-760, CAT_BOUNCE=-800, CAT_SPEED=240, CAT_GAP_MIN=140, CAT_GAP_MAX=170;
-var cat=null, tramps=[], camY=0, jumpRequest=false, airJump=true;
+var cat=null, tramps=[], camY=0, jumpRequest=false, airJump=true, minCamY=0;
 
 function startCat(){
-  setScore(0); camY=0; jumpRequest=false; airJump=true;
-  var W=canvas.clientWidth;
-  cat={x:W/2,y:220,vx:0,vy:0,onGround:false};
-  tramps=[]; for (var i=0;i<14;i++) addTramp(i===0?260:null);
+  setScore(0); jumpRequest=false; airJump=true;
+  var W=canvas.clientWidth, H=canvas.clientHeight;
+  cat={x:W/2,y:H*0.6,vx:0,vy:0,onGround:false};
+  camY = cat.y - H*0.35;           // стартовый кадр
+  minCamY = camY;                  // камера может двигаться только вверх (в меньшую Y)
+  tramps=[]; 
+  for (var i=0;i<14;i++) addTramp(i===0? (cat.y+40) : null); // первая платформа под котом
 }
+
 function addTramp(constY){
   var W=canvas.clientWidth;
   var gap = CAT_GAP_MIN + Math.random()*(CAT_GAP_MAX-CAT_GAP_MIN);
-  var newY = (constY!==null && constY!==undefined) ? constY : (tramps.length ? tramps[tramps.length-1].y - gap : 260);
+  var newY = (typeof constY==='number') ? constY : (tramps.length ? tramps[tramps.length-1].y - gap : camY + 200);
   var x = 60 + Math.random()*(W-120);
   tramps.push({x:x, y:newY, w:Math.max(120, Math.min(220, W*0.3)), h:18});
 }
 
-/* ВАЖНО: обработчики прыжка — ТОЛЬКО когда state==='cat' */
-/* иначе блокировали клики по меню на iOS */
+/* прыжок — только в режиме cat (чтобы меню не ломать) */
 function requestJump(){ if (state==='cat') jumpRequest = true; }
 ['pointerdown','mousedown'].forEach(function(evt){
   canvas.addEventListener(evt, function(){ if(state==='cat'){ requestJump(); } }, {passive:false});
-  document.body.addEventListener(evt, function(){ /* не трогаем меню */ if(state==='cat'){ requestJump(); } }, {passive:false});
 });
 ['touchstart'].forEach(function(evt){
   canvas.addEventListener(evt, function(e){ if(state==='cat'){ e.preventDefault(); requestJump(); } }, {passive:false});
-  document.body.addEventListener(evt, function(e){ if(state==='cat'){ e.preventDefault(); requestJump(); } }, {passive:false});
 });
 jumpBtn.addEventListener('pointerdown', function(e){ e.preventDefault(); requestJump(); }, {passive:false});
 jumpBtn.addEventListener('touchstart',  function(e){ e.preventDefault(); requestJump(); }, {passive:false});
@@ -236,11 +240,11 @@ function updateCat(dt){
 
   // физика
   cat.vy += CAT_G * dt;
-  cat.x += cat.vx * dt;
-  cat.y += cat.vy * dt;
+  cat.x  += cat.vx * dt;
+  cat.y  += cat.vy * dt;
   cat.x = Math.max(16, Math.min(W-16, cat.x));
 
-  // платформы
+  // платформы (приземление)
   cat.onGround=false;
   for (var i=0;i<tramps.length;i++){
     var t=tramps[i];
@@ -258,25 +262,46 @@ function updateCat(dt){
     jumpRequest=false;
   }
 
-  // камера/спавн
-  var highest = tramps[0] ? tramps[0].y : 0;
-  for (i=1;i<tramps.length;i++){ if (tramps[i].y < highest) highest = tramps[i].y; }
-  while (highest - camY > -H*1.2 && tramps.length < 40){ addTramp(); highest = Math.min(highest, tramps[tramps.length-1].y); }
-  for (i=tramps.length-1;i>=0;i--){
-    if (tramps[i].y - camY > H+160){ tramps.splice(i,1); addTramp(highest - (CAT_GAP_MIN + Math.random()*(CAT_GAP_MAX-CAT_GAP_MIN))); }
+  // КАМЕРА: целевая позиция — держать кота на 35% от верха
+  var desired = cat.y - H*0.35;
+  if (desired < minCamY) minCamY = desired;           // запоминаем самый верх
+  // сглаженно тянем камеру только вверх
+  if (minCamY < camY){
+    camY += (minCamY - camY) * Math.min(1, dt*6);     // lerp
+    if (Math.abs(minCamY - camY) < 0.5) camY = minCamY;
   }
-  if (cat.y - camY > H + 200){ showMenu(); }
+
+  // СПАВН: гарантируем платформы выше экрана
+  var topY = tramps.length ? tramps[0].y : camY + 200;
+  for (i=1;i<tramps.length;i++) if (tramps[i].y < topY) topY = tramps[i].y;
+  while (topY > camY - H*0.8 && tramps.length < 60){    // докладываем вверх
+    addTramp(topY - (CAT_GAP_MIN + Math.random()*(CAT_GAP_MAX-CAT_GAP_MIN)));
+    // обновим topY
+    topY = tramps[0].y; for (i=1;i<tramps.length;i++) if (tramps[i].y < topY) topY = tramps[i].y;
+  }
+
+  // Очистка: всё, что сильно ниже низа экрана — в утиль
+  for (i=tramps.length-1;i>=0;i--){
+    if (tramps[i].y > camY + H + 200){ tramps.splice(i,1); }
+  }
+
+  // фейл: упал слишком низко
+  if (cat.y > camY + H + 240){ showMenu(); }
 }
 
 function drawCat(){
   var W=canvas.clientWidth,H=canvas.clientHeight;
   ctx.fillStyle='#0a0e19'; ctx.fillRect(0,0,W,H);
+  // платформы с учётом камеры
   ctx.fillStyle='#80ffd8'; ctx.strokeStyle='rgba(0,0,0,.25)'; ctx.lineWidth=1;
-  for (var i=0;i<tramps.length;i++){ var t=tramps[i]; roundRect(t.x, t.y - camY, t.w, t.h, 10); ctx.fill(); ctx.stroke(); }
+  for (var i=0;i<tramps.length;i++){
+    var t=tramps[i]; roundRect(t.x, t.y - camY, t.w, t.h, 10); ctx.fill(); ctx.stroke();
+  }
+  // кот
   drawCatSprite(cat.x, cat.y - camY);
 }
 
-/* ---- Утилиты ---- */
+/* Утилиты */
 function roundRect(x,y,w,h,r){ ctx.beginPath(); ctx.moveTo(x+r,y); ctx.arcTo(x+w,y,x+w,y+h,r); ctx.arcTo(x+w,y+h,x,y+h,r); ctx.arcTo(x,y+h,x,y,r); ctx.arcTo(x,y,x+w,y,r); ctx.closePath(); }
 function drawCatSprite(x,y){
   ctx.save(); ctx.translate(x,y);
@@ -290,7 +315,7 @@ function drawCatSprite(x,y){
   ctx.restore();
 }
 
-/* ---- Главный цикл ---- */
+/* Главный цикл */
 var last = Date.now(), paused=false;
 function loop(){
   var now = Date.now();
