--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css" />
-  <style>
-    body.playing-worm header,
-    body.playing-worm main,
-    body.playing-worm footer {
-      display: none; /* скрываем меню, когда идёт игра */
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css?v=3" />
 </head>
 <body>
   <div class="bg-decor"></div>
@@ -55,7 +48,12 @@
     </section>
 
     <figure class="hero__art">
-      <img src="./assets/snake-hero.jpg" alt="Змейка из Kosmos.Worm" />
+      <img src="./assets/kosmos-worm-512.png"
+           srcset="./assets/kosmos-worm-256.webp 256w,
+                   ./assets/kosmos-worm-512.webp 512w,
+                   ./assets/kosmos-worm-1024.webp 1024w"
+           sizes="(max-width: 600px) 70vw, 420px"
+           alt="Змейка Kosmos.Worm" loading="eager" decoding="async" />
       <div class="shine"></div>
     </figure>
   </main>
@@ -65,8 +63,14 @@
   </footer>
 
   <!-- Подключение логики меню -->
-  <script src="./script.js"></script>
+  <script src="./script.js?v=3"></script>
   <!-- Подключение самой игры -->
-  <script src="./game.js"></script>
+  <script src="./game.v3.js?v=3"></script>
+
+  <!-- Фолбэк: если события не сработают -->
+  <script>
+    document.getElementById('btn-worm')?.addEventListener('click', ()=>window.__worm?.start?.());
+    document.getElementById('btn-menu')?.addEventListener('click', ()=>window.__worm?.stop?.());
+  </script>
 </body>
 </html>
