--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- Подключение самой игры -->
   <script src="./game.v3.js?v=3"></script>
 
-  <!-- Фолбэк: если события не сработают -->
+  <!-- Фолбэк -->
   <script>
     document.getElementById('btn-worm')?.addEventListener('click', ()=>window.__worm?.start?.());
     document.getElementById('btn-menu')?.addEventListener('click', ()=>window.__worm?.stop?.());
